<resources>
    <string name="app_name">NMedia</string>
    <string name="text">Nmedia!</string>
    <string name="avatar">Avatar</string>
    <string name="menu">Menu</string>
    <string name="like">Like</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="description_post_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="comment">Comments</string>
    <string name="repost">Reposts</string>
    <string name="views">Views</string>
    <string name="add_post">Add post</string>
    <string name="play_video">Play video</string>
    <string name="video_name">Video name</string>
    <string name="video_preview">Video preview</string>
    <string name="edit_post">Edit post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">User %1$s published new post:</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>